--- a/css/style.css
+++ b/css/style.css
@@ -181,16 +181,80 @@ body {
 	text-align: left;
 	color: #909090;
 }
-.main__text {
-	width: 33%;
+
+.home__about {
+	display: flex;
+	align-items: center;
 }
-.main__text span {
+.home__about .container {
+	display: flex;
+}
+.home__about .main__text {
+	width: 33%;
+	min-width: 33%;
+}
+.home__about .main__text span {
 	font-size: 24px;
 	font-weight: 900;
 	top: 20px;
 	text-transform: uppercase;
+}
+.home__about .slider {
+	width: 66.666666%;
+	min-width: 66.666666%;
+}
+.home__about .slider-action {
+	width: 783px;
+	height: 398px;
+	position: relative;
+}
+.home__about .slider-action::before {
+	content: '';
+	width: 148px;
+	height: 148px;
+	background-color: #6dcc0e;
+	display: block;
+	position: absolute;
+	top: -17px;
+	right: -17px;
+	z-index: 1;
+}
+.home__about .slider-action::after {
+	content: '';
+	width: 250px;
+	height: 250px;
+	background-color: #6dcc0e;
+	display: block;
+	position: absolute;
+	bottom: -55px;
+	left: -55px;
+	z-index: 1;
+}
+.home__about .slick-slider {
+	z-index: 2;
+}
+.home__about .slider-controls {
+	margin-top: 30px;
+	text-align: right;
 
 }
+.home__about .slider .slider-controls button {
+	width: 42px;
+	height: 20.3px;
+
+	border: none;
+	fill: transparent;
+	background-color: #0000;
+	align-items: center;
+
+}
+.home__about .slider-controls svg {
+	width: 42px;
+	height: 20.3px;
+
+}
+
+
 .main__items svg {
 	width: 52px;
 	height: 52px;
@@ -379,6 +443,7 @@ body {
 	letter-spacing: normal;
 	text-align: left;
 	color: #ffffff;
+	margin-left: 100;
 
 }
 .home__cta .title span {
@@ -386,9 +451,12 @@ body {
 
 }
 .home__cta .action {
-	width: 50%;
-	min-width: 50%;
-margin: auto;
+	width: 30%;
+	min-width: 30%;
+	margin: auto;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
 }
 .home__cta .button {
 	align-items: center;
@@ -410,21 +478,26 @@ margin: auto;
 .home__cta .button-text {
 	flex-grow: 0;
 	font-size: 16px;
-  font-weight: 500;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: normal;
-    color: #ffffff;
-  text-align: center;
-  padding-top: 16px;
+	font-weight: 500;
+	font-stretch: normal;
+	font-style: normal;
+	line-height: normal;
+	letter-spacing: normal;
+	color: #ffffff;
+	text-align: center;
+	padding-top: 16px;
 }
 .home__testimonials {
 	margin-top: 67px;
-
+}
+.home__testimonials .container {
+	justify-content: space-between;
+	width: 1200px;
+	max-width: 100%;
+	margin: 0 auto;
 }
 .home__testimonials .title {
-	color: #000000;;
+	color: #000000;
 	font-family: Roboto;
 	font-size: 80px;
 	font-weight: 900;
@@ -433,8 +506,6 @@ margin: auto;
 	line-height: 0.98;
 	letter-spacing: normal;
 	text-align: left;
-	min-width: 33.33%;
-	width: 33.33%;
 	text-transform: uppercase;
 }
 .home__testimonials .title span {
@@ -442,6 +513,99 @@ margin: auto;
 	-webkit-text-stroke: 2px #000000;
 	line-height: 0.98; 
 }
+.home__testimonials .slider {
+	
+}
+.home__testimonials .slider-action {
+	height: 403px;
+	position: relative;
+}
+.home__testimonials .slider-action::before {
+	content: '';
+	width: 148px;
+	height: 148px;
+	background-color: #6dcc0e;
+	display: block;
+	position: absolute;
+	top: -17px;
+	right: -17px;
+	z-index: 1;
+}
+.home__testimonials .slider-action::after {
+	content: '';
+	width: 250px;
+	height: 250px;
+	background-color: #6dcc0e;
+	display: block;
+	position: absolute;
+	bottom: -55px;
+	left: -55px;
+	z-index: 1;
+}
+.home__testimonials .slick-slider {
+	z-index: 2;
+	width: 366px;
+	height: 403px;
+	box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.25);
+	background-color: #ffffff;
+}
+.home__testimonials .slider .slick-slider .card {
+	width: 366px;
+	height: 403px;
+	background-color: transparent;
+}
+.home__testimonials .slider .card svg {
+	width: 32px;
+	height: 32px;
+	padding: 37px 0 0 25px;
+}
+.home__testimonials .slider .card .text {
+	font-family: Roboto;
+	font-size: 18px;
+	font-weight: 500;
+	font-stretch: normal;
+	font-style: normal;
+	line-height: normal;
+	letter-spacing: normal;
+	text-align: left;
+	color: #121212;
+	padding: 10px 26 0 37px;
+}
+.home__testimonials .slider .card-who {
+	display: flex;
+	align-items: center;
+	padding: 83px 31 22 37px;
+
+}
+.home__testimonials .slider .card .who-name {
+	font-family: Roboto;
+	font-size: 18px;
+	font-weight: bold;
+	font-stretch: normal;
+	font-style: normal;
+	line-height: normal;
+	letter-spacing: normal;
+	text-align: right;
+	color: #6dcc0e;
+}
+.home__testimonials .slider .card .who-job {
+	font-family: Roboto;
+	font-size: 14px;
+	font-weight: bold;
+	font-stretch: normal;
+	font-style: normal;
+	line-height: normal;
+	letter-spacing: normal;
+	text-align: right;
+	color: #000000;
+}
+.home__testimonials .slider .card .card-photo {
+	width: 72px;
+	height: 72px;
+	border-radius: 50%;
+	margin-left: 15px;
+}
+
 
 .home__contacts {
 	margin-top: 145px;
@@ -472,56 +636,146 @@ margin: auto;
 }
 .home__contacts .item {
 	font-family: Roboto;
-  font-size: 20px;
-  font-weight: 300;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  text-align: left;
-  color: #ffffff;
-  margin-top: 42px;
+	font-size: 20px;
+	font-weight: 300;
+	font-stretch: normal;
+	font-style: normal;
+	line-height: normal;
+	letter-spacing: normal;
+	text-align: left;
+	color: #ffffff;
+	margin-top: 42px;
 }
 .home__contacts .item span {
 	margin: 8px 0 0;
-  font-family: Roboto;
-  font-size: 24px;
-  font-weight: 500;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  text-align: left;
-  color: #ffffff;
+	font-family: Roboto;
+	font-size: 24px;
+	font-weight: 500;
+	font-stretch: normal;
+	font-style: normal;
+	line-height: normal;
+	letter-spacing: normal;
+	text-align: left;
+	color: #ffffff;
+	display: block;
 }
 .home__contacts .contact__items svg {
 	width: 28px;
 	height: 28px;
 	padding: 13px 13px 12px 0px;
 }
+
 .contacts__form {
 	background-color: #ffffff;
 	width: 60%;
 	min-width: 60%;
 }
-.home__contacts .contacts__form .title {
+.home__contacts .contacts__form {
+
+}
+.home__contacts .contacts__form .title-form {
 	font-family: Roboto;
-  font-size: 32px;
-  font-weight: normal;
+	font-size: 32px;
+	font-weight: normal;
+	font-stretch: normal;
+	font-style: normal;
+	line-height: normal;
+	letter-spacing: normal;
+	text-align: left;
+	color: #000000;
+	margin-left: 29px;
+	margin-top: 28px;
+	box-sizing: border-box;
+}
+.home__contacts .contacts__form .title-form span {
+	font-weight: bold;
+	color: #6dcc0e;
+}
+.home__contacts .contacts__form .form-item {
+	display: flex;
+	align-items: center;
+	border: none;
+	background: transparent;
+	width: 585px;
+	padding-top: 40px;
+	padding-left: 25px;
+
+}
+.home__contacts .contacts__form .form-item input {
+	width: 585px;
+	height: 50px;
+	flex-grow: 0;
+	border: none;
+	background: transparent;
+	padding:0;
+	border-bottom: 2px solid #000000;
+	font-family: Roboto;
+	font-size: 16px;
+	font-weight: 500;
+	font-stretch: normal;
+	font-style: normal;
+	line-height: normal;
+	letter-spacing: normal;
+	text-align: left;
+	color: #999999;
+	outline: none!important;
+}
+.home__contacts .contacts__form .form-cta {
+	display: flex;
+	align-items: center;  
+	padding-top: 43px;
+}
+.home__contacts .contacts__form .form__action {
+	width: 586px;
+	height: 56px;
+	border-radius: 4px;
+	transition: 0.3s;
+	cursor: pointer;
+	font-size: 24px;
+	font-weight: 500;
+	font-stretch: normal;
+	font-style: normal;
+	line-height: normal;
+	letter-spacing: normal;
+	text-align: center;
+	color: #ffffff;
+	background: #6DCC0E;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+	border: none;
+}
+.home__contacts .contacts__form .form-item input:hover {
+	
+  font-size: 18px;
+  font-weight: 500;
   font-stretch: normal;
   font-style: normal;
   line-height: normal;
   letter-spacing: normal;
   text-align: left;
   color: #000000;
-  margin-left: 29px;
-  
-  margin-top: 28px;
-  width: 60%;
-  min-width: 60%;
-      box-sizing: border-box;
+  border-bottom: 2px solid #6DCC0E;
 }
-.home__contacts .contacts__form .title span {
-	font-weight: bold;
-  color: #6dcc0e;
+.home__contacts .contacts__form::before {
+	content: '';
+	width: 148px;
+	height: 148px;
+	background-color: #6dcc0e;
+	display: block;
+	position: absolute;
+	top: -17px;
+	right: -17px;
+	z-index: 1;
+}
+.home__contacts .contacts__form::after {
+	content: '';
+	width: 250px;
+	height: 250px;
+	background-color: #6dcc0e;
+	display: block;
+	position: absolute;
+	bottom: -55px;
+	left: -55px;
+	z-index: 1;
 }
